// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Deploy plugin response system error 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  buildbotServerSocket: /test/socket
  debug: true
  repositoryRoot: packages/build/tests/deploy/fixtures/empty
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/deploy/fixtures/empty

> Config file
  packages/build/tests/deploy/fixtures/empty/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/deploy/fixtures/empty
    publishOrigin: default

> Context
  production

Deploy site                                                   
────────────────────────────────────────────────────────────────


Internal error during "Deploy site"                           
────────────────────────────────────────────────────────────────

  Error message
  Error: Deploy did not succeed: test

  Error location
  During Deploy site
STACK TRACE

  Resolved config
  build:
    publish: packages/build/tests/deploy/fixtures/empty
    publishOrigin: default"
`;

exports[`Deploy plugin response user error 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  buildbotServerSocket: /test/socket
  debug: true
  repositoryRoot: packages/build/tests/deploy/fixtures/empty
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/deploy/fixtures/empty

> Config file
  packages/build/tests/deploy/fixtures/empty/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/deploy/fixtures/empty
    publishOrigin: default

> Context
  production

Deploy site                                                   
────────────────────────────────────────────────────────────────


Configuration error                                           
────────────────────────────────────────────────────────────────

  Error message
  Deploy did not succeed: test

  Resolved config
  build:
    publish: packages/build/tests/deploy/fixtures/empty
    publishOrigin: default"
`;

exports[`Deploy plugin succeeds 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  buildbotServerSocket: /test/socket
  debug: true
  repositoryRoot: packages/build/tests/deploy/fixtures/empty
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/deploy/fixtures/empty

> Config file
  packages/build/tests/deploy/fixtures/empty/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/deploy/fixtures/empty
    publishOrigin: default

> Context
  production

Deploy site                                                   
────────────────────────────────────────────────────────────────

Site deploy was successfully initiated

(Deploy site completed in 1ms)
Build step duration: Deploy site completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;
